# integrity-oracle

./: .gitignore  Cargo.toml  README.md  TODO.md  WIKI.md  anchor_xibalba_ais.py  check_db.py  docker-compose.prod.yml  docker-compose.yml  setup_env.sh  simulate_slash.py
aggregator/: reputation.py
backend/: Cargo.toml  apply_defenses.py  faucet_worker.py  integrity_protocol.db  requirements.txt  rollup_daemon.py  seed.sql  seed_loans.sql  seed_wallet.sql  seed_xibalba_agent.sql  test_defenses.py  validate_backend.py
backend/migrations/: 20260531000000_init.sql  20260603000000_owner_claims.sql  20260603000001_compliance_telemetry.sql  20260606000000_expansions.sql  20260607000000_factory_market_bridge.sql  20260607000001_market_tasks_init.sql  20260607000002_credit_system.sql  20260607000003_wallet_system.sql  20260608000000_generalize_compliance.sql
backend/scripts/: seed_db.py  seed_dev.sql
backend/services/: blockchain_service.py  contract_monitor.py  data_ingestor.py  database.py  dispute_resolver.py  hermes_gateway.py  identity_api.py  kms_service.py  merkle_service.py  scoring_engine.py  trust_api.py  verification_engine.py
backend/services/abi/: IntegrityToken.json  ReputationRegistry.json  Slasher.json  StateAnchor.json
backend/src/: main.rs  merkle.rs  merkle_tests.rs  orderbook.rs  orderbook_tests.rs  rollup_daemon.rs
circuits/reputation/reputation/: Nargo.toml
circuits/reputation/src/: main.nr
circuits/telemetry/: Nargo.toml
circuits/telemetry/src/: main.nr
contracts/: IntegrityAnchor.sol  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: AgentFactory.sol  CCIPReputationBridge.sol  DomainRegistry.sol  EnterpriseRegistry.sol  IntegrityProtocol.sol  IntegrityToken.sol  ReputationLendingPool.sol  ReputationRegistry.sol  Slasher.sol  SovereignAgent.sol  StateAnchor.sol  UltraPlonkVerifier.sol  XibalbaAgentRegistry.sol  XibalbaNameService.sol
contracts/contracts/account-abstraction/: AgentAccountFactory.sol  AgentSmartAccount.sol  IntegrityPaymaster.sol  StablecoinPaymaster.sol
contracts/scripts/: deploy.js  deploy_associations.js  expand_protocol.js  finalize_setup.js
db/: telemetry_rotation.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_STRATEGY.md  MINDMAP.md  ROADMAP_AND_GOVERNANCE.md  WHITEPAPER.md
gateway/: Dockerfile  nginx.conf
oracle/: .env.production  Dockerfile
oracle-core/: Cargo.toml  Dockerfile  README.md  build.rs  build_and_copy.sh  build_and_deploy_host.sh
oracle-core/bb_rs/: Cargo.toml
oracle-core/bb_rs/src/: lib.rs
oracle-core/scratch/: simulate_edge_cases.py
oracle-core/src/: main.rs
passport-verifier/: Cargo.toml
passport-verifier/src/: main.rs
scoring-core/: Cargo.toml
scoring-core/src/: lib.rs
sdk/: README.md
sdk/nodejs/: .eslintrc.js  README.md  integrity-sdk.js  package-lock.json  package.json  validate-scoring.js  validate-sdk.js
sdk/nodejs/src/: api.ts  blockchain.ts  index.ts  integrity_sdk.ts  interceptors.ts  scoring.ts  types.ts
sdk/python/: README.md  integrity_cli.py  integrity_middleware.py  integrity_sdk.py  pyproject.toml  register_hermes.py  test_sdk_metadata.py
sdk/python/xibalba_integrity/: __init__.py  client.py  interceptors.py  provider_middleware.py  scoring.py  types.py
sdk/python/xibalba_integrity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: alerting_sidecar.py
