[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio", "tls-rustls"] }
dotenvy = "0.15"
chrono = "0.4.44"
sha2 = "0.11.0"
hex = "0.4.3"
