[package]
name = "oracle"
version = "1.0.0-rc1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
redis = { version = "0.24", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.0"
base64 = "0.21"
bb_rs = { path = "bb_rs" }
libc = "0.2"

[build-dependencies]
cc = "1.0"
