[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xibalba-integrity"
version = "1.0.0"
description = "Official Python SDK for the Xibalba Integrity Protocol — decentralized AI agent reputation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Xibalba Solutions", email = "dev@xibalbasolutions.com"},
]
keywords = ["ai", "agents", "reputation", "blockchain", "integrity", "trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain>=0.1.0"]
web3 = ["web3>=6.0.0"]
all = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "web3>=6.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://xibalbasolutions.com"
Documentation = "https://docs.xibalbasolutions.com/sdk/python"
Repository = "https://github.com/XibalbaTechSol/integrity-protocol"

[tool.setuptools.packages.find]
where = ["."]
include = ["xibalba_integrity*"]

[tool.ruff]
target-version = "py39"
line-length = 100
